compiler/testData/diagnostics/tests/delegatedProperty/missedGetter.kt
val a: Int by <!DELEGATE_SPECIAL_FUNCTION_MISSING(getValue\(kotlin.Nothing?, kotlin.PropertyMetadata\); A)!>A()<!>

class A
